re PR c++/17401 (ICE with invalid pure specifier)

PR c++/17401
	* parser.c (cp_parser_pure_specifier): Emit a specific error
	message with an invalid pure specifier.
	* decl2.c (grok_function_init): Remove.
	(grokfield): An initializer for a method is a always a pure
	specifier.

	PR c++/17401
	* g++.dg/parse/error25.C: New test.

From-SVN: r94656